crates/hwp-core/tests/snapshots/snapshot_tests__headerfooter_hwpx_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<header class="hwp-header">
<p style="line-height: 150%"><span style="font-size: 9.0pt; font-family: '굴림'">Header 이것은 머리말입니다</span><span style="font-size: 9.0pt; font-family: '굴림'">.</span></p>
</header>
<div class="hwp-body">
<p><span style="font-size: 10.0pt; font-family: '바탕'">첫 페이지</span></p>
</div>
<footer class="hwp-footer">
<p style="line-height: 150%"><span style="font-size: 9.0pt; font-family: '굴림'">Footer 이것은 꼬리말입니다.</span></p>
</footer>
