crates/hwp-core/tests/snapshots/snapshot_tests__headerfooter_hwpx_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
Header 이것은 머리말입니다.



첫 페이지



Footer 이것은 꼬리말입니다.
