crates/hwp-core/tests/snapshots/snapshot_tests__hwpSummaryInformation_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<div class="body">

</div>
