crates/hwp-core/tests/snapshots/snapshot_tests__hyperlink_hwpx_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<div class="hwp-body">
<p><a href="http://naver.com">http://naver.com<span style="font-size: 10.0pt; font-family: '함초롬바탕'; color: rgb(0,0,255)"><u>하이퍼링크 테스트</u></span><span style="font-size: 10.0pt; font-family: '함초롬바탕'"> naver.com</span></p>
<p><a href="file://">file://<span style="font-size: 10.0pt; font-family: '함초롬바탕'; color: rgb(0,0,255)"><u>align.hwp</u></span></p>
<p><a href="#">#<span style="font-size: 10.0pt; font-family: '함초롬바탕'; color: rgb(0,0,255)"><u>문서의처음</u></span></p>
<p><a href="mailto:bookyoon173@gmail.com?subject=전자우편주소제목">mailto:bookyoon173@gmail.com?subject=전자우편주소제목<span style="font-size: 10.0pt; font-family: '함초롬바탕'; color: rgb(0,0,255)"><u>전자우편</u></span></p>
</div>
