crates/hwp-core/tests/snapshots/snapshot_tests__issue144_fields_crossing_lineseg_boundary_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<div class="body">
<p><a href="http://google.com">http://google.com<span style="font-size: 32.0pt; font-family: '바탕'">google g</span><span style="font-size: 32.0pt; font-family: '바탕'; color: rgb(0,0,255)"><u>oogle google google google google</u></span></a></p>
<p><span style="font-size: 32.0pt; font-family: '바탕'">gmail g</span><a href="http://gmail.com">http://gmail.com<span style="font-size: 32.0pt; font-family: '바탕'">mail gma</span><span style="font-size: 32.0pt; font-family: '바탕'; color: rgb(0,0,255)"><u>il gmail gmail gmail</u></span></p>
<p><span style="font-size: 32.0pt; font-family: '바탕'; color: rgb(0,0,255)"><u>gmai</u></span></a><span style="font-size: 32.0pt; font-family: '바탕'">le</span></p>
</div>
